--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 
         <div class="caption-3">
             <h3>
-                With years of experience, we have earned a reputation for delivering exceptional results, tailored to our clients’ unique needs and preferences.
+                With years of experience, we have earned a reputation <br> for delivering exceptional results, tailored to our clients’<br> unique needs and preferences.
             </h3>
             <p>
-                We combine creativity, expertise and attention to detail to deliver landscaping and fencing solutions that enhance beauty, functionality, and value of your property.
+                We combine creativity, expertise and attention to detail to deliver landscaping and fencing <br> solutions that enhance beauty, functionality, and value of your property.
             </p>
         </div>
     </section>
