--- a/testimonials.html
+++ b/testimonials.html
@@ -41,7 +41,7 @@
         </h2>
 
         <div class="item1">
-            <img src="images/Testimonial1.png" alt="">
+            <img src="testimonial1.png" alt="">
         </div>
 
         <p>Our dedicated team strives to deliver prompt, courteous, and <br> transparent communication, ensuring that
@@ -53,7 +53,7 @@
         <div class="main-grid">
             <div class="grid-container">
                 <div class="image-left">
-                    <img src="testimonial2.png" alt="">
+                    <img src="images/testimonial2.png" alt="">
                 </div>
 
                 <div class="text-center">
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="image-right1"> <img src="testimonial3.png" alt=""> </div>
-            <div class="image-right2"> <img src="testimonial4.png" alt=""> </div>
+            <div class="image-right2"> <img src="images/testimonial4.png" alt=""> </div>
         </div>
     </section>
 
@@ -76,60 +76,58 @@
         <div class="grid-container">
             <div class="grid-text1"><p>What our <br>customers <br>say</p></div>
             <div class="grid-item">
-                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <video src="videos/CR-1.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...Excellent service provided by Daman and his team. Great quality work and flexible to work with. Easy to make adjustments as required. I highly recommend their services....</div>
+                    <div class="video-text">...Hats off to the whole work you carried out, the ownership you’ve showed throughout the journey especially the team work...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
             <div class="grid-item">
-                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <video src="videos/CR-2.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...The team at Pro Landscaping and Fencing did a great job on our front yard.  Delivered outstanding quality in their work, and were always professional with their communication.  Would recommend to anyone looking for a quality landscaping service.
-                        ...</div>
+                    <div class="video-text">...Marvelous, met my expectations, I highly recommend...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
             <div class="grid-item">
-                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <video src="videos/CR-3.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...Daman and team have done a great job with our front and back yard. They are really professional and have completed the job on time. Happy with the outcome...</div>
+                    <div class="video-text">...Truly want to thank Daman and his team in excellent work they have done, especially in taking up a project with this land which is really not easy...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
             <div class="grid-item">
-                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <video src="videos/CR-4.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...We had done landscaping and fencing done by Pro Landscaping .Quality work and affordable prices.We are so happy with the results.Thank you guys for the beautiful job.
-                        Highly recommended...</div>
+                    <div class="video-text">...You and your team are extremely professionals in terms of how you do work, the neatness, you and your team works according to the clients timeline...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
             <div class="grid-item">
-                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <video src="videos/CR-5.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...Highly Recommend Daman and the team. They did Fencing and landscaping for us. Friendly people and quality work. Satisfied with overall outcome. Definitely will recommend to friends and family...</div>
+                    <div class="video-text">...We were a bit short on ideas, so you’re really great in not only doing a great job but also helping us put together a great plan...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
             <div class="grid-item">
-                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <video src="videos/CR-6.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...We recently had our fencing, concreting and landscaping done by Daman and his team. We highly recommend Pro Landscaping for anyone looking for top notch services. Their professionalism, quality of work and commitment to customer satisfaction truly set them apart...</div>
+                    <div class="video-text">...You guys finished the job pretty quickly actually, surprisingly in the hot weather we got here in Melbourne...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
             <div class="grid-item">
-                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <video src="videos/CR-7.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...Very professional and down to earth. The  retaining walls and gardening were done perfectly. I was very impressed with his work...</div>
+                    <div class="video-text">...Daman and the team have done a very good job, the quality of the work is good...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
