--- a/services.html
+++ b/services.html
@@ -124,7 +124,7 @@
             });
             if (page === 'retaining-walls') {
                 document.getElementById('content-1').innerHTML = "Retaining walls are the backbone of a well-designed landscape, offering structural support and aesthetic appeal. They prevent soil erosion, create level platforms on slopes, and add visual interest to outdoor spaces.";
-                document.getElementById('content-2').innerHTML = "we ensure not only durability but also elegance and function seamlessly into your landscape design.";
+                document.getElementById('content-2').innerHTML = "We ensure not only durability but also elegance and function seamlessly into your landscape design.";
                 document.getElementById('content-3').innerHTML = "Types of<br>retaining walls<br>we offer:"
                 document.getElementById('content-4').innerHTML = "<li>Concrete Sleepers </li> <li>Render Walls </li> <li>Versa Walls</li> <li>Stone Walls</li>"
                 document.getElementById('content-5').innerHTML = '<img src="images/Retaining1.png" alt="Retaining">';
