--- a/contactus.html
+++ b/contactus.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="info">
                     <h3>Email</h3>
-                    <p>prolandscapigandfencing@gmail.com</p>
+                    <p>prolandscapingandfencing@gmail.com</p>
                 </div>
                 <div class="info">
                     <h3>Phone</h3>
