--- a/footer.html
+++ b/footer.html
@@ -21,8 +21,8 @@
         <button class="get-quote-button">Get a Quote</button>
     </div>
     <div class="caption-4">
-        <span>PRO LANDSCAPING AND FENCING</span>
-        <span>+61 430 431 634</span>
+        <span>PRO LANDSCAPING & FENCING</span>
+        <span>prolandscapingandfencing@gmail.com | +61 430 431 634</span>
     </div>
 </div>
 </section>
