--- a/services.html
+++ b/services.html
@@ -15,9 +15,37 @@
                 <img src="logo.png" alt="logo" srcset="">
                 <span>PRO LANDSCAPING & FENCING</span>
             </div>
-            <div class="right">
+            <div class="right right-horz">
                 <a href="index.html">
-                    <span id="home">Home<span >.</span></span>
+                    <span id="home">Home<span>.</span></span>
+                </a>
+                <a href="services.html">
+                    <span id="services">Services<span  class="active">.</span></span>
+                </a>
+                <a href="testimonials.html">
+                    <span id="testimonials">Testimonials<span>.</span></span>
+                </a>
+                <a href="contactus.html">
+                    <span id="contactus">Contact Us</span>
+                </a>
+            </div>
+            <div class="hamburger" id="hamburger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+            <div class="right-panel right" id="right-panel">
+                <svg id="close-button" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="256" height="256" viewBox="0 0 256 256" xml:space="preserve">
+    
+                    <defs>
+                    </defs>
+                    <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)" >
+                        <path d="M 13.4 88.492 L 1.508 76.6 c -2.011 -2.011 -2.011 -5.271 0 -7.282 L 69.318 1.508 c 2.011 -2.011 5.271 -2.011 7.282 0 L 88.492 13.4 c 2.011 2.011 2.011 5.271 0 7.282 L 20.682 88.492 C 18.671 90.503 15.411 90.503 13.4 88.492 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                        <path d="M 69.318 88.492 L 1.508 20.682 c -2.011 -2.011 -2.011 -5.271 0 -7.282 L 13.4 1.508 c 2.011 -2.011 5.271 -2.011 7.282 0 l 67.809 67.809 c 2.011 2.011 2.011 5.271 0 7.282 L 76.6 88.492 C 74.589 90.503 71.329 90.503 69.318 88.492 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                    </g>
+                </svg>
+                <a href="index.html">
+                    <span id="home">Home<span>.</span></span>
                 </a>
                 <a href="services.html">
                     <span id="services">Services<span class="active">.</span></span>
@@ -127,7 +155,7 @@
                 document.getElementById('content-2').innerHTML = "We ensure not only durability but also elegance and function seamlessly into your landscape design.";
                 document.getElementById('content-3').innerHTML = "Types of<br>retaining walls<br>we offer:"
                 document.getElementById('content-4').innerHTML = "<li>Concrete Sleepers </li> <li>Render Walls </li> <li>Versa Walls</li> <li>Stone Walls</li>"
-                document.getElementById('content-5').innerHTML = '<img src="images/Retaining1.png" alt="Retaining">';
+                document.getElementById('content-5').innerHTML = '<img src="images/newImg5.jpg" class="new-img" alt="Retaining">';
                 document.getElementById('content-6').innerHTML = '<img src="images/Retaining2.png" alt="Retaining">';
                 document.getElementById('content-7').innerHTML = '<img src="images/Retaining3.png" alt="Retaining">';
                 document.getElementById('content-9').innerHTML = '<img src="images/Retaining4.png" alt="Retaining">';
@@ -184,6 +212,16 @@
                         .addEventListener("click", function (e) {
                         e.stopPropagation();
                         });
+                });
+                const hamburger = document.getElementById('hamburger');
+                const closeButton = document.getElementById('close-button');
+                const rightPanel = document.getElementById('right-panel');
+
+                hamburger.addEventListener('click', function() {
+                    rightPanel.classList.toggle('visible');
+                });
+                closeButton.addEventListener('click', function() {
+                    rightPanel.classList.toggle('visible');
                 });
         });
         </script>
