Updated the images:

--- a/testimonials.html
+++ b/testimonials.html
@@ -82,7 +82,7 @@
         <div class="main-grid">
             <div class="grid-container">
                 <div class="image-left">
-                    <img src="images/testimonial2.png" alt="">
+                    <img src="images/newImg4.jpg" style="height: 360px; width: 110%;" alt="">
                 </div>
 
                 <div class="text-center">
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="image-right1"> <img src="testimonial3.png" alt=""> </div>
-            <div class="image-right2"> <img src="images/testimonial4.png" alt=""> </div>
+            <div class="image-right2"> <img src="images/newImg3.jpg" style="height: 68%;" alt=""> </div>
         </div>
     </section>
 
