--- a/services.html
+++ b/services.html
@@ -75,7 +75,7 @@
                     <h3 id="content-1"></h3>
                 </div>
                 <div id="content-5"  class="grid-item item2">
-                    <img src="images/landscaping1.png" alt="">
+                    <img src="images/testimonial4.png" alt="">
                 </div>
             </div>
 
@@ -105,16 +105,16 @@
 
             <div class="landscaping-end">
                 <div id="content-9" class="item7">
-                    <img src="images/landscaping4.png" alt="">
+                    <img src="images/newImg2.jpg" alt="">
                 </div>
                 <div id="content-10" class="item8">
                     <img src="images/landscaping5.png" alt="">
                 </div>
                 <div id="content-11" class="item9">
-                    <img src="images/landscaping6.png" alt="">
+                    <img src="images/newImg.jpg" id="bottom-landscaping-img" alt="">
                 </div>
                 <div id="content-12" class="item10">
-                    <img src="images/landscaping7.png" alt="">
+                    <img src="images/landscaping6.png" alt="">
                 </div>
             </div>
 
