--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Pro Landscaping and Fencing</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="google-site-verification" content="0x_M99RhtmLYOGdaX_xhvFIJGh3L65CkHIMBlRFGIxo" />
     <meta name="viewport" content="width=1024"> <!-- Set a fixed width to simulate a desktop view -->
 </head>
 <body>
