--- a/contactus.html
+++ b/contactus.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="logo.png" alt="logo" srcset="">
+        <div class="logo" onclick="window.location.href='index.html'" style="cursor: pointer; pointer-events: auto;">
+            <img src="logo.png" alt="logo">
             <span>PRO LANDSCAPING & FENCING</span>
         </div>
         <div class="right right-horz">
@@ -44,7 +44,7 @@
                 </g>
             </svg>
             <a href="index.html">
-                <span id="home">Home<span class="active">.</span></span>
+                <span id="home">Home<span>.</span></span>
             </a>
             <a href="services.html">
                 <span id="services">Services<span>.</span></span>
