--- a/testimonials.html
+++ b/testimonials.html
@@ -11,8 +11,8 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="logo.png" alt="logo" srcset="">
+        <div class="logo" onclick="window.location.href='index.html'" style="cursor: pointer; pointer-events: auto;">
+            <img src="logo.png" alt="logo">
             <span>PRO LANDSCAPING & FENCING</span>
         </div>
         <div class="right right-horz">
